kubernetes/apigateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hashitapigateway
  labels:
    io.kompose.service: hashitapigateway
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: hashitapigateway
    spec:
      containers:
      - env:
        - name: EUREKA_URI
          value: http://servicediscovery:8761/eureka
        - name: JAVA_OPTIONS
          value: -Xmx352278K -Xss1M -XX:ReservedCodeCacheSize=240M -XX:MaxDirectMemorySize=10M
            -XX:MaxMetaspaceSize=126953K -Dcom.sun.management.jmxremote.port=9003
            -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false
            -Dcom.sun.management.jmxremote.rmi.port=9003 -Djava.rmi.server.hostname=localhost
        - name: JWT_ENABLED
          value: "false"
        - name: SPRING_APPLICATION_JSON
          value: '{"spring": {"cloud": {"config": {"uri": "http://configserver:8888"}}}}'
        image: docker.paloitcloud.com.sg/hash-it/hashitapigateway:latest
        name: hashitapigateway
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
      - name: regsecret
---
apiVersion: v1
kind: Service
metadata:
  name: hashitapigateway
  labels:
    io.kompose.service: hashitapigateway
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: hashitapigateway
