kubernetes/apigateway-ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  creationTimestamp: 2018-10-16T03:47:51Z
  generation: 1
  name: external-hash-it-dev-api
  namespace: hash-it-dev
  resourceVersion: "21389459"
  uid: 41418b5f-d0f6-11e8-bf31-d4ae52bc8b57
spec:
  rules:
  - host: hashit-api.paloitcloud.com.sg
    http:
      paths:
      - backend:
          serviceName: hashitapigateway
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - hashit-api.paloitcloud.com.sg
    secretName: hashit-api-tls
status:
  loadBalancer:
    ingress:
    - ip: 11.0.0.28
    - ip: 11.0.0.29
