kubernetes/servicediscovery-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: servicediscovery
  name: servicediscovery
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: servicediscovery
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx352278K -Xss1M -XX:ReservedCodeCacheSize=240M -XX:MaxDirectMemorySize=10M
            -XX:MaxMetaspaceSize=126953K -Dcom.sun.management.jmxremote.port=9001
            -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false
            -Dcom.sun.management.jmxremote.rmi.port=9001 -Djava.rmi.server.hostname=localhost
        - name: JWT_ENABLED
          value: "true"
        image: docker.paloitcloud.com.sg/hash-it/servicediscovery:latest
        name: servicediscovery
        ports:
        - containerPort: 8761
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
      - name: regsecret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: servicediscovery
  name: servicediscovery
spec:
  ports:
  - name: "8761"
    port: 8761
    targetPort: 8761
  selector:
    io.kompose.service: servicediscovery
